Add encrypted security answer retrieval and validation via Syncope endpoint with user search permission